formatting EARS, added disclaimer to Shiny, and fixed NA/zero problem in grams per day

--- a/shiny/v2/app_text/01overview.html
+++ b/shiny/v2/app_text/01overview.html
@@ -78,16 +78,24 @@ ul
 <div class=WordSection1>
 
 <p style='margin:0in;margin-bottom:.0001pt'><b><span style='font-family:"Calibri",sans-serif;
+color:red'>Please note that this web explorer is still under development.
+Please contact Chris Free (cfree14@gmail.com) if you have any comments,
+questions, suggestions, or concerns. Thanks!</span></b></p>
+
+<p style='margin:0in;margin-bottom:.0001pt'><b><span style='font-family:"Calibri",sans-serif;
+color:black'>&nbsp;</span></b></p>
+
+<p style='margin:0in;margin-bottom:.0001pt'><b><span style='font-family:"Calibri",sans-serif;
 color:black'>Introduction to this web explorer</span></b></p>
 
 <p style='margin:0in;margin-bottom:.0001pt'><span style='font-family:"Calibri",sans-serif;
 color:black'>This web application is designed to help users explore (1) the
 importance of marine fisheries to human nutrition, (2) the projected impacts of
-climate change on the nutrient endowment of marine fisheries, and (3) the opportunities
-for fisheries management reforms to mitigate impacts of climate change on food
-and nutrition from marine seafood. Data are presented at the national scale to
-allow users to assess vulnerability, sensitivity, and adaptive capacity in
-their country.</span></p>
+climate change on the nutrient endowment of marine fisheries, and (3) the
+opportunities for fisheries management reforms to mitigate impacts of climate
+change on food and nutrition from marine seafood. Data are presented at the
+national scale to allow users to assess vulnerability, sensitivity, and
+adaptive capacity in their country.</span></p>
 
 <p class=MsoNormal>&nbsp;</p>
 
@@ -115,9 +123,9 @@ margin-bottom:.0001pt;text-indent:-.25in;vertical-align:baseline'><span
 style='font-family:"Calibri",sans-serif;color:black'>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><b><span style='font-family:"Calibri",sans-serif;color:black'>National
 nutrition data:</span></b><span style='font-family:"Calibri",sans-serif;
-color:black'> This page allows the user to assess the current and historical
-daily per capita intake of 23 nutrients in 173 countries and the contribution
-of marine fish and invertebrates to this intake using the </span><a
+color:black'> This page allows the user to assess the current and historical daily
+per capita intake of 23 nutrients in 173 countries and the contribution of
+marine fish and invertebrates to this intake using the </span><a
 href="https://dataverse.harvard.edu/dataverse.xhtml?alias=GENuS"><span
 style='font-family:"Calibri",sans-serif;color:#1155CC'>GENuS database</span></a><span
 style='font-family:"Calibri",sans-serif;color:black'> (Smith et al. 2016). By
@@ -138,13 +146,13 @@ fisheries and nutrition forecasts:</span></b><span style='font-family:"Calibri",
 color:black'> This page allows the user to explore the projected impacts of
 climate change on national fisheries with and without climate adaptive
 fisheries reforms and thus the consequences of climate change and fisheries
-adaptation on national nutrition endowments from marine fisheries. These
-projections are powered by combining the fisheries projections of Free et al.
-(2020) with the nutrient content estimates of Smith et al. (2016). This page
-allows the user to anticipate the extent to which fisheries reforms could be
-leveraged to fill nutritional gaps under climate change or the extent to which
-other food sectors, international trade, or food fortification will have to
-fill nutritional gaps widened or unfilled by declining fisheries.</span></p>
+adaptation on national nutrition endowments from marine fisheries. These projections
+are powered by combining the fisheries projections of Free et al. (2020) with
+the nutrient content estimates of Smith et al. (2016). This page allows the
+user to anticipate the extent to which fisheries reforms could be leveraged to
+fill nutritional gaps under climate change or the extent to which other food
+sectors, international trade, or food fortification will have to fill
+nutritional gaps widened or unfilled by declining fisheries.</span></p>
 
 <p class=MsoNormal>&nbsp;</p>
 
